# SpecDiff

./: .gitignore  Makefile  README.md
crossspec/: README.ja.md  README.md  crossspec.yml.example  pyproject.toml
crossspec/samples/: README.md  crossspec.yml
crossspec/samples/mail/: sample.eml
crossspec/src/crossspec/: __init__.py  claims.py  cli.py  config.py  hashing.py  normalize.py  paths.py  pydantic_compat.py  yaml_utils.py
crossspec/src/crossspec/code_extract/: __init__.py  c_cpp_extractor.py  python_extractor.py  scanner.py
crossspec/src/crossspec/domain/: models.py  ports.py
crossspec/src/crossspec/extract/: __init__.py  base.py  eml_extractor.py  pdf_extractor.py  pptx_extractor.py  xlsx_extractor.py
crossspec/src/crossspec/infra/: fallback_retriever.py  jsonl_store.py  planner_stub.py  scoring.py  trace_engine.py
crossspec/src/crossspec/io/: __init__.py  jsonl.py
crossspec/src/crossspec/server/: wire.py
crossspec/src/crossspec/tagging/: __init__.py  keyword_tagger.py  llm_tagger.py  taxonomy.py
crossspec/src/crossspec/usecases/: compute_coverage.py  get_claim.py  plan_requirement.py  search_claims.py  trace_claim.py
crossspec/taxonomy/: features.yaml
crossspec/tests/: test_code_extract.py  test_generate_samples.py  test_hashing.py  test_normalize.py  test_path_resolution.py  test_sample_report.py  test_search.py  test_server_usecases.py  test_taxonomy.py
crossspec/tests/fixtures/: sample_pj_claims.jsonl  sample_pj_code_claims.jsonl  server_code_claims.jsonl  server_spec_claims.jsonl  server_test_claims.jsonl
docs/: ARCHITECTURE.md  (+1 more)
(+37 files in other folders)
