[project]
name = "crossspec"
version = "0.1.0"
description = "CrossSpec - extract immutable claims from business artifacts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "CrossSpec Contributors"}]
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.6.0",
  "openpyxl>=3.1.0",
  "python-pptx>=0.6.23",
  "PyMuPDF>=1.23.0",
  "requests>=2.31.0",
]

[project.scripts]
crossspec = "crossspec.cli:app"

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
